--- a/client/src/styles/RetroButtons.css
+++ b/client/src/styles/RetroButtons.css
@@ -3,7 +3,8 @@
     justify-content: center;
     align-items: center;
     gap: 45px;
-    margin-top: 100px;
+    margin-top: 90px;
+    margin-bottom: 150px;
 }
 
 
