--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,7 +19,21 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.game-search-bar {
+    width: 100%;
+    border: 2px solid white;
+    align-self: flex-end;
+    margin-right: 10px;
+}
+
+.search-button {
+    width: 25%;
+    padding: 0;
+    margin: 0;
 }
 
 .game-grid {
@@ -31,6 +45,19 @@ body {
 .game-card {
     width: 30%;
     margin-bottom: 20px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 30px;
+}
+
+.form-item {
+    display: flex;
+    flex-direction: column;
+    width: 45%
 }
 
 @media screen and (max-width: 786px) {
@@ -48,5 +75,15 @@ body {
         justify-content: center;
         width: 90%;
         align-self: center;
+    }
+    .form-group {
+        flex-direction: column;
+        justify-content: center;
+        width: 90%;
+        margin: 0 auto;
+    }
+    .form-item {
+        width: 100%;
+        margin-bottom: 30px;
     }
 }
