--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,6 +60,33 @@ body {
     width: 45%
 }
 
+.tag-inputs {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.input-trio {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.input-pair {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 20px;
+}
+
+.tag-input-group {
+    width: '100%';
+    margin: 5px;
+}
+
 @media screen and (max-width: 786px) {
     .game-card {
         width: 45%
@@ -85,5 +112,14 @@ body {
     .form-item {
         width: 100%;
         margin-bottom: 30px;
+    }
+    .tag-inputs {
+        flex-direction: column;
+    }
+    .input-trio {
+        flex-direction: column;
+    }
+    .input-pair {
+        flex-direction: column;
     }
 }
