--- a/client/src/styles/SignUp.css
+++ b/client/src/styles/SignUp.css
@@ -3,6 +3,9 @@
     background-color: black;
     color: rgb(7, 7, 7);
     padding: 20px;
+    width: 75%;
+    margin: 0 auto;
+    margin-top: 50px;
   }
   
   h2 {
